--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "author": "James K Nelson <james@frontarm.com>",
   "bin": {
-    "create-react-blog": "cli.js"
+    "create-react-blog": "create-react-blog.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/frontarm/create-react-blog.git"
   },
   "keywords": [
     "mdx",
@@ -14,6 +18,8 @@
     "navi"
   ],
   "dependencies": {
+    "chalk": "1.1.3",
+    "commander": "2.18.0",
     "cross-spawn": "^6.0.5",
     "fs-extra": "^7.0.1"
   }
