--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-react-blog",
   "description": "Initialize a React blog with create-react-app, MDX, and Navi",
-  "version": "0.11.0",
+  "version": "0.11.2",
   "license": "MIT",
   "author": "James K Nelson <james@frontarm.com>",
   "bin": {
@@ -20,7 +20,12 @@
   "dependencies": {
     "chalk": "1.1.3",
     "commander": "2.18.0",
-    "cross-spawn": "^6.0.5",
-    "fs-extra": "^7.0.1"
+    "cross-spawn": "6.0.5",
+    "envinfo": "6.0.1",
+    "fs-extra": "7.0.1",
+    "hyperquest": "2.1.3",
+    "tar-pack": "3.4.1",
+    "tmp": "0.0.33",
+    "validate-npm-package-name": "3.0.0"
   }
 }
