--- a/template-ts/package.json
+++ b/template-ts/package.json
@@ -5,22 +5,23 @@
   "dependencies": {
     "@types/jest": "23.3.12",
     "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
+    "@types/react": "^16.8.1",
+    "@types/react-dom": "^16.0.11",
     "blueimp-md5": "^2.3.0",
     "feed": "^2.0.2",
     "import-all.macro": "^2.0.3",
     "lodash": "^4.17.11",
-    "navi": "^0.10.5",
-    "navi-scripts": "^0.10.6",
+    "navi": "^0.11.0-alpha.1",
+    "navi-scripts": "^0.11.0-alpha.2",
     "netlify-cli": "^2.6.0",
     "prismjs": "^1.15.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-navi": "^0.10.6",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-navi": "^0.11.0-alpha.1",
     "react-scripts-mdx": "2.1.4",
     "rimraf": "^2.6.2",
     "slugify": "^1.3.2",
+    "terser": "3.10.8",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   },
