--- a/template-ts/package.json
+++ b/template-ts/package.json
@@ -11,13 +11,13 @@
     "feed": "2.0.2",
     "import-all.macro": "2.0.3",
     "lodash": "4.17.11",
-    "navi": "^0.11.0-beta.0",
-    "navi-scripts": "^0.11.0-beta.0",
+    "navi": "^0.11.1",
+    "navi-scripts": "^0.11.1",
     "netlify-cli": "2.6.0",
     "prismjs": "1.15.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
-    "react-navi": "^0.11.0-beta.0",
+    "react-navi": "^0.11.1",
     "react-scripts-mdx": "2.1.4",
     "rimraf": "2.6.2",
     "slugify": "1.3.2",
