--- a/template-ts/package.json
+++ b/template-ts/package.json
@@ -11,13 +11,14 @@
     "feed": "2.0.2",
     "import-all.macro": "2.0.3",
     "lodash": "4.17.11",
-    "navi": "^0.12.8",
-    "navi-scripts": "^0.12.4",
+    "navi": "^0.13.1",
+    "navi-scripts": "^0.13.1",
     "netlify-cli": "2.6.0",
     "prismjs": "1.15.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-navi": "^0.12.8",
+    "react-navi": "^0.13.1",
+    "react-navi-helmet-async": "^0.13.1",
     "react-scripts-mdx": "3.0.3",
     "rimraf": "2.6.2",
     "slugify": "1.3.2",
