--- a/template/package.json
+++ b/template/package.json
@@ -17,11 +17,12 @@
     "react-navi-helmet-async": "^0.13.3",
     "react-scripts-mdx": "3.0.3",
     "rimraf": "^2.6.2",
+    "sitemap": "^6.3.5",
     "slugify": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && navi-scripts build",
+    "build": "react-scripts build && navi-scripts build && cp ./public/sitemap.xml ./build/sitemap.xml",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "navi-scripts serve",
